--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+.text
+
 #.venvs folder
 .venvs/
 #.vscode folder
